--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^0.9.3",
+    "bulma-social": "^2.1.0",
     "express": "^4.17.3",
     "foundation-sites": "^6.7.4",
     "get-youtube-id": "^1.0.1",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-youtube": "^8.2.1",
+    "social": "^0.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
